--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
                                    <p class="lead">1. Browse Job Listings: Explore current openings in various departments, ranging from library and research roles to event planning and tech support.</p>
 
-                                   <p class="lead">2. Create Your Profile: Sign up and create a personalized profile to highlight your skills, interests, and experience.</p>
+                                   <p class="lead">2. Apply and Connect: Easily apply for jobs that match your goals. Our platform makes it simple to connect with campus employers.</p>
 
-                                   <p class="lead">3. Apply and Connect: Easily apply for jobs that match your goals. Our platform makes it simple to connect with campus employers.</p>
+                                   <p class="lead">3. Network with your peers and learn more about your industry by reading our blog posts.</p>
 
                               </div>
                          </div>
@@ -186,7 +186,7 @@
                                    </div>
 
                                    <div class="courses-detail">
-                                        <h3><a href="job-details.html">Graphic Designer for Event Flyers</a></h3>
+                                        <h3><a href="job-details 2.html">Graphic Designer for Event Flyers</a></h3>
 
                                         <p class="lead"><strong>₦5,000 per flyer (negotiable)</strong></p>
 
@@ -194,7 +194,7 @@
                                    </div>
 
                                    <div class="courses-info">
-                                        <a href="job-details.html" class="section-btn btn btn-primary btn-block">View Details</a>
+                                        <a href="job-details 2.html" class="section-btn btn btn-primary btn-block">View Details</a>
                                    </div>
                               </div>
                          </div>
@@ -207,21 +207,21 @@
                                         </div>
                                         <div class="courses-date">
                                              <span title="Posted on"><i class="fa fa-calendar"></i> 15-06-2020</span>
-                                             <span title="Location"><i class="fa fa-map-marker"></i> Library</span>
+                                             <span title="Location"><i class="fa fa-map-marker"></i> Basketball Court</span>
                                              
                                         </div>
                                    </div>
 
                                    <div class="courses-detail">
-                                        <h3><a href="job-details.html">Library Assistant</a></h3>
+                                        <h3><a href="job-details 3.html">Videographer for Basketball team</a></h3>
 
                                         <p class="lead"><strong>₦15,000 per month (fixed)</strong></p>
 
-                                        <p>Posted by: University Library</p>
+                                        <p>Posted by: Basketball Team</p>
                                    </div>
 
                                    <div class="courses-info">
-                                        <a href="job-details.html" class="section-btn btn btn-primary btn-block">View Details</a>
+                                        <a href="job-details 3.html" class="section-btn btn btn-primary btn-block">View Details</a>
                                    </div>
                               </div>
                          </div>
