--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6153106965251856"
+     crossorigin="anonymous"></script>
      <title>   JobHive | Campus Jobs</title>
      <meta name="google-adsense-account" content="ca-pub-6153106965251856">
      <meta charset="UTF-8">
