--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                          <li><a href="job-listing.html">Jobs</a></li>
                          <li><a href="about-us.html">About Us</a></li>
                          <li><a href="blog-posts.html">Blog</a></li>
+                         <li><a href="post-a-job-2.html">Post a Job</a></li>
+                         
                          <!-- <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
                               
@@ -81,7 +83,7 @@
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Welcome to JobHive —Your Gateway to On-Campus Job Opportunities!</h1>
                                         <h3>Whether you’re interested in building skills for your future career, meeting new people, or simply earning some extra cash, we’ve got options that fit your goals.</h3>
-                                        <a href="jobs.html" class="section-btn btn btn-default">Browse Jobs</a>
+                                        <a href="job-listing.html" class="section-btn btn btn-default">Browse Jobs</a>
                                    </div>
                               </div>
                          </div>
@@ -93,7 +95,7 @@
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Why Work on Campus?</h1>
                                         <h3>On-campus jobs are designed with students in mind. They’re flexible, convenient, and offer a unique chance to work in a supportive environment.</h3>
-                                        <a href="jobs.html" class="section-btn btn btn-default">Browse Jobs</a>
+                                        <a href="job-listing.html" class="section-btn btn btn-default">Browse Jobs</a>
                                    </div>
                               </div>
                          </div>
@@ -105,7 +107,7 @@
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Explore, Grow, and Make an Impact</h1>
                                         <h3>So dive in, find the role that’s right for you, and start building your future today!</h3>
-                                        <a href="jobs.html" class="section-btn btn btn-default">Browse Jobs</a>
+                                        <a href="job-listing.html" class="section-btn btn btn-default">Browse Jobs</a>
                                    </div>
                               </div>
                          </div>
