--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,9 @@
                          <li><a href="job-listing.html">Jobs</a></li>
                          <li class="active"><a href="about-us.html">About Us</a></li>
                          <li><a href="blog-posts.html">Blog</a></li>
-                         <li class="dropdown">
+                         <li><a href="post-a-job-2">Post a Job</a></li>
+
+<!--                          <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
                               
                               <ul class="dropdown-menu">
@@ -64,7 +66,7 @@
                                    <li><a href="testimonials.html">Testimonials</a></li>
                                    <li><a href="terms.html">Terms</a></li>
                               </ul>
-                         </li>
+                         </li> -->
                          <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                </div>
@@ -155,12 +157,12 @@
 
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
-                              <div class="section-title">
+                              <!-- <div class="section-title">
                                    <h2>Headquarter</h2>
                               </div>
                               <address>
                                    <p>212 Barrington Court <br>New York, ABC 10001</p>
-                              </address>
+                              </address> -->
 
                               <ul class="social-icon">
                                    <li><a href="#" class="fa fa-facebook-square" attr="facebook icon"></a></li>
@@ -168,10 +170,10 @@
                                    <li><a href="#" class="fa fa-instagram"></a></li>
                               </ul>
 
-                              <div class="copyright-text"> 
+                              <!-- <div class="copyright-text"> 
                                    <p>Copyright &copy; 2020 Company Name</p>
                                    <p>Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
-                              </div>
+                              </div> -->
                          </div>
                     </div>
 
@@ -181,8 +183,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+1 333 4040 5566</p>
-                                   <p><a href="mailto:contact@company.com">contact@company.com</a></p>
+                                   <p>+234 9079 796 761</p>
+                                   <p><a href="mailto:contact@company.com">contact@jobhive.com</a></p>
                               </address>
 
                               <div class="footer_menu">
@@ -217,7 +219,6 @@
                </div>
           </div>
      </footer>
-
 
      <!-- SCRIPTS -->
      <script src="js/jquery.js"></script>
