--- a/post-a-job-2.html
+++ b/post-a-job-2.html
@@ -171,5 +171,54 @@
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/smoothscroll.js"></script>
   <script src="js/custom.js"></script>
+  <!-- Success Modal -->
+  <div id="successModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Your job has been posted successfully!</p>
+    </div>
+  </div>
+
+  <script>
+  // Select the modal and its elements
+  const modal = document.getElementById("successModal");
+  const closeModalButton = document.querySelector(".close");
+  const form = document.querySelector("form");
+
+  // Show the modal after form submission
+  form.addEventListener("submit", function (event) {
+    event.preventDefault(); // Prevent the default form submission
+
+    // Optional: Validate required fields
+    const jobTitle = document.getElementById("job-title").value;
+    const location = document.getElementById("location").value;
+    const description = document.getElementById("job-description").value;
+
+    if (!jobTitle || !location || !description) {
+      alert("Please fill out all required fields!");
+      return;
+    }
+
+    // Show the modal
+    modal.style.display = "block";
+
+    // Clear the form fields
+    form.reset();
+  });
+
+  // Close the modal when the 'x' button is clicked
+  closeModalButton.onclick = function () {
+    modal.style.display = "none";
+  };
+
+  // Close the modal when clicking outside of it
+  window.onclick = function (event) {
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  };
+</script>
+
+
 </body>
 </html>
