--- a/blog-post-details.html
+++ b/blog-post-details.html
@@ -56,6 +56,8 @@
                          <li><a href="job-listing.html">Jobs</a></li>
                          <li><a href="about-us.html">About Us</a></li>
                          <li class="active"><a href="blog-posts.html">Blog</a></li>
+                         <li class="active"><a href="post-a-job-2">Post a Job</a></li>
+
                          <!-- <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
                               
