--- a/blog-posts.html
+++ b/blog-posts.html
@@ -56,7 +56,7 @@
                          <li><a href="job-listing.html">Jobs</a></li>
                          <li><a href="about-us.html">About Us</a></li>
                          <li class="active"><a href="blog-posts.html">Blog</a></li>
-                         <li class="active"><a href="blog-posts.html">Blog</a></li>
+                         <li class="active"><a href="post-a-job-2.html">Post a Job</a></li>
 
                          <!-- <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
