--- a/job-listing.html
+++ b/job-listing.html
@@ -56,6 +56,8 @@
                          <li class="active"><a href="job-listing.html">Jobs</a></li>
                          <li><a href="about-us.html">About Us</a></li>
                          <li><a href="blog-posts.html">Blog</a></li>
+                         <li class="active"><a href="post-a-job-2.html">Post a Job</a></li>
+
                          <!-- <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
                               
